Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6227936/Orig.out
Orig.java:27:26: compiler.err.cant.resolve.location.args: kindname.method, someMethod, , , (compiler.misc.location: kindname.class, GenericTest.C, null)
1 error
